syntax = "proto3";


package com.aamir;

option java_multiple_files = true;
option java_package="com.aamir";
option  java_outer_classname="StockTradingProto";


service StockTradingService {
    rpc getStockPrice (StockRequest) returns (StockResponse);
}

message StockRequest {
    string stock_symbol = 1;
}

message StockResponse {
    string stock_symbol = 1;
    double price = 2;
    string timestamp = 3;
}